[package]
name = "rust-wasm-game-of-life"
version = "0.1.1"
authors = ["Ronald Wildenberg <rwwilden@gmail.com>"]
edition = "2021"
description = "Conway's Game of Life with Rust and WebAssembly"
license = "MIT"
repository = "https://github.com/rwwilden/rust-wasm-game-of-life"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

js-sys = "0.3.60"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
